# sha

./: .gitignore  README.md  README_experiments.md  pyproject.toml  terms_example.txt
data/: benchmark_terms.tsv  benchmark_terms.txt  benchmark_terms_sewage.tsv  benchmark_terms_sewage.txt  benchmark_terms_sewage_60.tsv  benchmark_terms_sewage_60_cases.tsv  benchmark_terms_sewage_60_template.tsv  test_cases.tsv
eval/: __init__.py  error_classifier.py  gold_extended_sample.tsv  gold_loader.py  gold_schema.py  harness.py  metrics.py  normalize.py
experiments/: 2026-06-13_e2b_eval.json  2026-06-13_e2b_neweval.json  2026-06-13_e4b_eval.json  2026-06-13_e4b_neweval.json  2026-06-13_sewage_e2b_eval.json  2026-06-13_sewage_e4b_eval.json  comparison_report.md  comparison_results.json  readings_dump.txt  reeval_diff_report.txt  run_method_comparison.py
gemma_runtime/: pyproject.toml
resolvers/: __init__.py  base.py  dict_resolvers.py  hybrid.py  llm.py
scripts/: annotate_readings.py  check_env.py  dump_readings.py  eval_readings.py  extract_terms.py  generate_sentences.py  ocr_documents.py  run_eval.py  run_extract.pbs  run_extract.sh  run_gpu_sewage60.sh  run_sewage60.pbs  synthesize_speech.py
tests/: test_method_comparison.py  test_metrics.py  test_normalize.py  test_resolvers.py
