[project]
name = "term2speech-gemma-runtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "pillow",
    "pypdf",
    "pypdfium2",
    "sentencepiece",
    "torch>=2.1.0",
    "transformers>=5.5.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
